# studgine

./: .gitmodules  CMakeLists.txt  premake5.lua
Editor/src/: main.cpp
Editor/src/Layers/: EditorLayer.h
Engine/src/: DLL.h  Engine.h
Engine/src/Core/: Application.cpp  Application.h  ECS.cpp  ECS.h  EventManager.cpp  EventManager.h  LayerStack.cpp  LayerStack.h  Logging.cpp  Logging.h  ServiceLocator.cpp  ServiceLocator.h  Window.cpp  Window.h  WindowsManager.cpp  WindowsManager.h
Engine/src/Core/Events/: Event.h  Keystroke.h  Shutdown.h
Engine/src/Core/Layers/: Layer.h
Engine/src/Renderer/2D/: Renderer2D.cpp  Renderer2D.h
setup/: ubuntu.sh
